# csy_git

./: backup_auto.sh  git_add_commit.sh  git_add_commit_push.sh  software_install.sh  system_info.sh  test.sh  update.sh
file_backup/: .bashrc  .tmux.conf  .vimrc  sources.list
prj_qt/qt_test/: mainwindow.cpp  mainwindow.ui  qt_test.pro
prj_qt/qt_visualizer/src/: pcl_visualizer.pro  pcl_visualizer.pro.user.22
prj_test/TheCloudViewer/: CMakeLists.txt  cloudviewer.cpp
prj_test/pcd_read/: CMakeLists.txt  test.cpp
prj_test/pcdread/: pcd_read.cpp  test_pcd.pcd
prj_test/pcdread2txt/: CMakeLists.txt  pcdread2txt.cpp
prj_test/pcl_test/: CMakeLists.txt  pcl_test.cpp
prj_test/prj_xyz2pcd/: CMakeLists.txt  data.xyz  output.pcd  xyz2pcd.cpp
